# unpacked-maybe

./: .gitignore  .travis.yml  LICENSE  README.md  shell.nix  unpacked-maybe.cabal
src/Data/Maybe/: Unpacked.hs  Unsafe.hs
src/Data/Maybe/Internal/: Unsafe.hs
test/: Main.hs  Spec.hs
