name:                unpacked-maybe
version:             0.1.0.0
synopsis:            An unpacked maybe data type
description:         Please see README.md
homepage:            https://github.com/mckeankylej/unpacked-maybe#readme
license:             BSD3
license-file:        LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
copyright:           2016 Kyle McKean
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Maybe.Unpacked
                     , Data.Maybe.Internal.Unsafe
  build-depends:       base >= 4.7 && < 5
                     , ghc-prim
                     , semigroups
  default-language:    Haskell2010

test-suite unpacked-maybe-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , unpacked-maybe
                     , doctest >= 0.11.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mckeankylej/unpacked-maybe
